--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
   </head>
   <body>
+  <body class="logged_in env-production windows vis-public page-edit-blob" style="
+  background-color:antiquewhite;
+  ">
 
       <header>
         <h1>Simulazione6</h1>
