--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 
   </head>
   <body>
-  <body class="logged_in env-production windows vis-public page-edit-blob" style="
-  background-color:antiquewhite;
-  ">
+  <body text"giallo">
 
       <header>
         <h1>Simulazione6</h1>
