--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-  <body style=background-color:"blue">
+  <body style="background-color:blue">
 
       <header>
         <h1>Simulazione6</h1>
