--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   </head>
   <body>
-  <body bgcolor:="blue">
+  <font color=”blue”>testo blu</font>
+<br/>
 
       <header>
         <h1>Simulazione6</h1>
