--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
   </head>
   <body>
-  <br>
-  <font color=”blue”>testo blu</font>
-<br/>
+  
 
-      <header>
+      <br />
+<font face=”Verdana, Arial, Helvetica, sans-serif” color=”blue”>
+testo blu in Verdana
+<br />
+<header>
         <h1>Simulazione6</h1>
         <p></p>
       </header>
