--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
   <body>
   
 
-      <br />
-<font face=”Verdana, Arial, Helvetica, sans-serif” color=”blue”>
-testo blu in Verdana
-<br />
+      #my-id{color:red}
 <header>
         <h1>Simulazione6</h1>
         <p></p>
