--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 
   </head>
   <body>
-  
+  <style></style>
 
       #my-id{color:red}
+        
+      </style>
+      
 <header>
         <h1>Simulazione6</h1>
         <p></p>
