--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <style type=text/css">
-    #my-id{color:red}
+    #my-id{color:aliceblue}
     </style>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Simulazione6 by Rosanna-Perria</title>
