--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <p><img src="http://notesmagico.files.wordpress.com/2012/05/sigmund-freud.jpg"style="float:right;margin:11px;width 30%;"></p>
 
-<pre><code>$ cd your_repo_root/repo_name
+<pre><code>1856-1939
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
