--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <p><img src="http://notesmagico.files.wordpress.com/2012/05/sigmund-freud.jpg"style="float:right;margin:11px;width 30%;"></p>
 
 <pre><code>1856-1939
-$ git fetch origin
-$ git checkout gh-pages
+neurologo e psicoanalista
+fondatore della psicoanalisi
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
