--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ neurologo e psicoanalista
 fondatore della psicoanalisi
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>.“Un uomo come me non può vivere senza una mania, una passione divorante o, per dirla con Schiller, senza un tiranno. Io ho trovato il mio tiranno e, per servirlo, non conosco limiti. È la psicologia.” </p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
