--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ fondatore della psicoanalisi
 <p>.“Un uomo come me non può vivere senza una mania, una passione divorante o, per dirla con Schiller, senza un tiranno. Io ho trovato il mio tiranno e, per servirlo, non conosco limiti. È la psicologia.” </p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>I sogni</h3>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
