--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ fondatore della psicoanalisi
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>I sogni</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Nel 1900 Sigmund Freud pubblicò ” L’interpretazione dei sogni” (“Die Traumdeutung”) ed in questo saggio, considerato il manifesto della psicoanalisi, formalizzò i suoi studi e le sue idee su questo tema portandolo all’attenzione della comunità accademica dell’epoca ed investendolo di dignità scientifica</p>
 
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
