--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ fondatore della psicoanalisi
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>critiche rivolte a freud</h3>
 <iframe width="560" height="315" src="//www.youtube.com/embed/dOI2EE5Dy4g" frameborder="0" allowfullscreen></iframe>
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p> 
+Siamo ormai d'accordo che nonostante tutto il nostro orgoglio per le nostre conquiste culturali, non ci riesce facile assolvere le richieste di questa civiltà, sentirci a nostro agio in essa, perché le limitazioni pulsionali imposteci significano per noi un grave onere psichico. Ebbene, ciò che abbiamo riconosciuto valido per le pulsioni sessuali vale in uguale e forse maggior misura per le altre pulsioni, quelle aggressive. Sono queste soprattutto che rendono difficile la convivenza degli uomini e che ne minacciano la continuità; la limitazione della propria aggressività è il primo e forse più difficile sacrificio che la società deve esigere dal singolo</p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/Rosanna-Perria">Rosanna-Perria</a></p>
