--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 
       <div id="banner">
         <span id="logo"></span>
+        <style type="text/css">
+
+body {
+font-size: 14pt;
+font-family: "Comic Sans MS", arial, sans-serif;
+color: pink;
+}
+
+</style>
 
         <a href="https://github.com/Rosanna-Perria/simulazione6" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
